# NewOnePlatform

./: .gitignore  CLAUDE.md  DESIGN.md  HANDOFF.md  README.md
.claude/skills/run-aipm/: SKILL.md  baseline.jsonl
ai-engine/: README.md  pyproject.toml
ai-engine/scenarios/: 01_linear_baseline.yaml  02_decision_reversal.yaml  03_deadline_slip.yaml  04_dependency_break.yaml  05_open_question_lifecycle.yaml  06_action_proposals.yaml
ai-engine/src/aipm/: approval.py  briefing.py  conflicts.py  conversation.py  entities.py  events.py  identity.py  projection.py  review.py  revision.py  schema.py  state.py
ai-engine/tests/: test_approval.py  test_conflicts.py  test_conversation.py  test_extraction.py  test_identity.py  test_projection.py  test_replay.py  test_review.py  test_revision.py  test_schema.py
backend/: .env.example  README.md  pyproject.toml
backend/src/aipm_backend/: channels.py  config.py  extraction.py  main.py  models.py  storage.py  tracing.py
backend/tests/: test_api.py  test_extraction.py  test_tracing.py
cli/: README.md  pyproject.toml
cli/src/aipm_cli/: main.py
cli/tests/: test_main.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Drawer.tsx  ErrorBoundary.tsx  Modal.tsx  PageHeader.tsx  ProjectPulse.tsx  Toast.tsx  ui.tsx
frontend/src/lib/: api.ts  cn.ts  (+12 more)
scenarios/: 02_decision_reversal.yaml  03_deadline_slip.yaml
simulations/: orion_checkout.py
src/aipm/: cli.py  events.py  projection.py  state.py
tests/: test_replay.py
(+21 files in other folders)
